# Parallel-Computing-I

./: CMakeLists.txt  README.md  run.sh
Paper/ARA_time_measurement/: 2048_128_1000.out  4096_128_2000.out  4096_256_1000.out  4096_256_1000_blocked.out  4096_512_500.out  4096_64_4000.out  slurm-593584.out  slurm-593585.out
Paper/Graphics/: graph.py
lib/: CreatePPM.h  ExtractBlock.h  GetMargin.h  InitField.h  InsertBlock.h  MPI_Init_Fin.h  Print_Functions.h  SortField.h  Stencil.h
src/: main_Block.cpp  main_non_Block.cpp
